# GoQuant

./: .env.example  README.md  conanfile.txt  meson.build  meson_options.txt  run_tests.sh
include/: ErrorCodes.h  Gateway.h  Gateway_DM.h  Gateway_OM.h
src/: Gateway.cpp  Gateway_DM.cpp  Gateway_OM.cpp
test/: BitfinexGatewayTests.cpp  SeedData.cpp  SeedData.h
